fastcarto/fastdb/include/fastdb_payload.h

#define FDB_PAYLOAD_V1_ABI_VERSION UINT32_C(1)
#define FDB_PAYLOAD_V1_COMPILE_OPTIONS_V1_SIZE UINT32_C(80)
#define FDB_PAYLOAD_V1_CAPABILITIES_V1_SIZE UINT32_C(72)
#define FDB_PAYLOAD_V1_BUILDER_OPTIONS_V2_SIZE UINT32_C(96)
#define FDB_PAYLOAD_V1_OPEN_OPTIONS_V1_SIZE UINT32_C(112)
#define FDB_PAYLOAD_V1_PLAN_INFO_V2_SIZE UINT32_C(112)
#define FDB_PAYLOAD_V1_EXECUTION_REPORT_V1_SIZE UINT32_C(72)
typedef uint32_t fdb_payload_v1_status_t;
typedef uint32_t fdb_payload_v1_profile_t;
typedef uint64_t fdb_payload_v1_object_handle_t;
typedef struct fdb_payload_v1_spec fdb_payload_v1_spec_t;
typedef struct fdb_payload_v1_blob fdb_payload_v1_blob_t;
typedef struct fdb_payload_v1_error fdb_payload_v1_error_t;
typedef struct fdb_payload_v1_builder fdb_payload_v1_builder_t;
typedef struct fdb_payload_v1_plan fdb_payload_v1_plan_t;
typedef struct fdb_payload_v1_payload fdb_payload_v1_payload_t;
typedef struct fdb_payload_v1_compile_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_source_bytes;
    uint64_t max_json_values;
    uint32_t max_nesting_depth;
    uint32_t max_entries;
    uint32_t max_components;
    uint32_t max_fields_per_component;
    uint64_t max_total_fields;
    uint64_t reserved[4];
} fdb_payload_v1_compile_options_t;
typedef struct fdb_payload_v1_capabilities {
    uint32_t struct_size;
    uint32_t profile;
    uint64_t semantic_flags;
    uint64_t operation_flags;
    uint64_t codegen_target_flags;
    uint32_t direct_build_status;
    uint32_t reserved32;
    uint64_t reserved64[4];
} fdb_payload_v1_capabilities_t;
typedef struct fdb_payload_v1_builder_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_value_nodes;
    uint64_t max_list_elements;
    uint64_t max_text_bytes;
    uint64_t max_opaque_bytes;
    uint64_t max_nesting_depth;
    uint64_t max_total_builder_bytes;
    uint64_t reserved[4];
    uint64_t max_graph_objects;
} fdb_payload_v1_builder_options_t;
typedef struct fdb_payload_v1_open_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_total_bytes;
    uint64_t max_regions;
    uint64_t max_entries;
    uint64_t max_components;
    uint64_t max_nesting_depth;
    uint64_t max_list_elements;
    uint64_t max_graph_objects;
    uint64_t max_string_bytes;
    uint64_t max_validation_work;
    uint64_t reserved[4];
} fdb_payload_v1_open_options_t;
typedef struct fdb_payload_v1_plan_info {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t total_bytes;
    uint64_t region_count;
    uint64_t logical_value_count;
    uint64_t list_element_count;
    uint64_t text_bytes;
    uint64_t opaque_bytes;
    uint64_t validation_work;
    uint32_t max_alignment;
    uint32_t direct_build_status;
    uint64_t reserved[4];
    uint64_t graph_object_count;
} fdb_payload_v1_plan_info_t;
typedef struct fdb_payload_v1_execution_report {
    uint32_t struct_size;
    uint32_t mode;
    uint32_t fallback_reason;
    uint32_t reserved32;
    uint64_t requested_bytes;
    uint64_t used_bytes;
    uint64_t staging_bytes;
    uint64_t region_count;
    uint64_t backing_capacity;
    uint64_t reserved64[2];
} fdb_payload_v1_execution_report_t;
typedef struct fdb_payload_v1_fixed_run_v1 {
    uint32_t struct_size;
    uint32_t flags;
    const void* data;
    uint64_t data_byte_length;
    uint64_t count;
    uint64_t stride_bytes;
    const uint8_t* validity;
    uint64_t validity_byte_length;
    uint64_t validity_bit_offset;
    uint64_t reserved[4];
} fdb_payload_v1_fixed_run_v1_t;
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_reserve_fn)(
    void* context,
    uint32_t reserve_mode,
    uint64_t minimum_capacity,
    uint32_t alignment,
    void** out_owner_token,
    uint8_t** out_writable_data,
    uint64_t* out_capacity);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_write_fn)(
    void* context,
    void* owner_token,
    uint64_t offset,
    const uint8_t* source,
    uint64_t source_size);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_commit_fn)(
    void* context,
    void* owner_token,
    uint64_t used_size,
    const uint8_t** out_readable_data,
    uint64_t* out_readable_size);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_rollback_fn)(
    void* context,
    void* owner_token);
typedef fdb_payload_v1_status_t (*fdb_payload_v1_backing_retain_fn)(
    void* context,
    void* owner_token);
typedef void (*fdb_payload_v1_backing_release_fn)(void* context,
                                                  void* owner_token);
typedef struct fdb_payload_v1_backing_v1 {
    uint32_t struct_size;
    uint32_t flags;
    void* context;
    fdb_payload_v1_backing_reserve_fn reserve;
    fdb_payload_v1_backing_write_fn write;
    fdb_payload_v1_backing_commit_fn commit;
    fdb_payload_v1_backing_rollback_fn rollback;
    fdb_payload_v1_backing_retain_fn retain;
    fdb_payload_v1_backing_release_fn release;
    uint64_t reserved[4];
} fdb_payload_v1_backing_v1_t;
FDB_PAYLOAD_API uint32_t fdb_payload_v1_abi_version(void);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_create(
    const fdb_payload_v1_spec_t* spec,
    const fdb_payload_v1_builder_options_t* options,
    fdb_payload_v1_builder_t** out_builder,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API void fdb_payload_v1_builder_release(
    fdb_payload_v1_builder_t* builder);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_entry_begin(
    fdb_payload_v1_builder_t* builder,
    uint32_t entry_index,
    uint64_t value_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_object_declare(
    fdb_payload_v1_builder_t* builder,
    uint32_t component_index,
    fdb_payload_v1_object_handle_t* out_object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_object_fill_begin(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_object_handle_t object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_null(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_bool(
    fdb_payload_v1_builder_t* builder,
    uint8_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_u8(
    fdb_payload_v1_builder_t* builder,
    uint8_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_u16(
    fdb_payload_v1_builder_t* builder,
    uint16_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_u32(
    fdb_payload_v1_builder_t* builder,
    uint32_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_i32(
    fdb_payload_v1_builder_t* builder,
    int32_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_u8n_f64_bits(
    fdb_payload_v1_builder_t* builder,
    uint64_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_u16n_f64_bits(
    fdb_payload_v1_builder_t* builder,
    uint64_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_f32_bits(
    fdb_payload_v1_builder_t* builder,
    uint32_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_f64_bits(
    fdb_payload_v1_builder_t* builder,
    uint64_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_str(
    fdb_payload_v1_builder_t* builder,
    const uint8_t* value,
    uint64_t value_size,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_wstr(
    fdb_payload_v1_builder_t* builder,
    const uint16_t* value,
    uint64_t value_size,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_bytes(
    fdb_payload_v1_builder_t* builder,
    const uint8_t* value,
    uint64_t value_size,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_fixed_run(
    fdb_payload_v1_builder_t* builder,
    const fdb_payload_v1_fixed_run_v1_t* run,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_component_begin(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_list_begin(
    fdb_payload_v1_builder_t* builder,
    uint64_t item_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_object(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_object_handle_t object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_ref(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_object_handle_t object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_freeze(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_plan_t** out_plan,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API void fdb_payload_v1_plan_retain(fdb_payload_v1_plan_t* plan);
FDB_PAYLOAD_API void fdb_payload_v1_plan_release(fdb_payload_v1_plan_t* plan);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_plan_info(
    const fdb_payload_v1_plan_t* plan,
    fdb_payload_v1_plan_info_t* out_info,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_plan_execute(
    const fdb_payload_v1_plan_t* plan,
    uint32_t policy,
    const fdb_payload_v1_backing_v1_t* backing,
    fdb_payload_v1_payload_t** out_payload,
    fdb_payload_v1_execution_report_t* out_report,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_payload_open_copy(
    const fdb_payload_v1_spec_t* spec,
    const uint8_t* bytes,
    uint64_t byte_count,
    const fdb_payload_v1_open_options_t* options,
    fdb_payload_v1_payload_t** out_payload,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_payload_open_external(
    const fdb_payload_v1_spec_t* spec,
    const uint8_t* bytes,
    uint64_t byte_count,
    const fdb_payload_v1_backing_v1_t* backing,
    void* owner_token,
    const fdb_payload_v1_open_options_t* options,
    fdb_payload_v1_payload_t** out_payload,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API void fdb_payload_v1_payload_retain(
    fdb_payload_v1_payload_t* payload);
FDB_PAYLOAD_API void fdb_payload_v1_payload_release(
    fdb_payload_v1_payload_t* payload);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_payload_sha256(
    const fdb_payload_v1_payload_t* payload,
    uint8_t out_digest[FDB_PAYLOAD_V1_SHA256_SIZE],
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_payload_profile(
    const fdb_payload_v1_payload_t* payload,
    fdb_payload_v1_profile_t* out_profile,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_payload_execution_report(
    const fdb_payload_v1_payload_t* payload,
    fdb_payload_v1_execution_report_t* out_report,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_payload_binary_blob(
    const fdb_payload_v1_payload_t* payload,
    fdb_payload_v1_blob_t** out_blob,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API void fdb_payload_v1_blob_retain(fdb_payload_v1_blob_t* blob);
FDB_PAYLOAD_API void fdb_payload_v1_blob_release(fdb_payload_v1_blob_t* blob);
FDB_PAYLOAD_API const uint8_t* fdb_payload_v1_blob_data(
    const fdb_payload_v1_blob_t* blob);
FDB_PAYLOAD_API uint64_t fdb_payload_v1_blob_size(
    const fdb_payload_v1_blob_t* blob);
FDB_PAYLOAD_API void fdb_payload_v1_error_retain(
    fdb_payload_v1_error_t* error);
FDB_PAYLOAD_API void fdb_payload_v1_error_release(
    fdb_payload_v1_error_t* error);
FDB_PAYLOAD_API uint32_t fdb_payload_v1_error_code(
    const fdb_payload_v1_error_t* error);
FDB_PAYLOAD_API void fdb_payload_v1_error_symbol(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);
FDB_PAYLOAD_API void fdb_payload_v1_error_path(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);
FDB_PAYLOAD_API void fdb_payload_v1_error_message(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);
FDB_PAYLOAD_API void fdb_payload_v1_error_details_json(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);