bindings/rust/fastdb-sys/src/lib.rs


    pub fn fdb_payload_v1_builder_create(
        spec: *const fdb_payload_v1_spec_t,
        options: *const fdb_payload_v1_builder_options_t,
        out_builder: *mut *mut fdb_payload_v1_builder_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_release(builder: *mut fdb_payload_v1_builder_t);
    pub fn fdb_payload_v1_builder_entry_begin(
        builder: *mut fdb_payload_v1_builder_t,
        entry_index: u32,
        value_count: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_object_declare(
        builder: *mut fdb_payload_v1_builder_t,
        component_index: u32,
        out_object: *mut u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_object_fill_begin(
        builder: *mut fdb_payload_v1_builder_t,
        object: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_null(
        builder: *mut fdb_payload_v1_builder_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_bool(
        builder: *mut fdb_payload_v1_builder_t,
        value: u8,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_u8(
        builder: *mut fdb_payload_v1_builder_t,
        value: u8,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_u16(
        builder: *mut fdb_payload_v1_builder_t,
        value: u16,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_u32(
        builder: *mut fdb_payload_v1_builder_t,
        value: u32,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_i32(
        builder: *mut fdb_payload_v1_builder_t,
        value: i32,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_u8n_f64_bits(
        builder: *mut fdb_payload_v1_builder_t,
        value: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_u16n_f64_bits(
        builder: *mut fdb_payload_v1_builder_t,
        value: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_f32_bits(
        builder: *mut fdb_payload_v1_builder_t,
        value: u32,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_f64_bits(
        builder: *mut fdb_payload_v1_builder_t,
        value: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_str(
        builder: *mut fdb_payload_v1_builder_t,
        value: *const u8,
        value_size: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_wstr(
        builder: *mut fdb_payload_v1_builder_t,
        value: *const u16,
        value_size: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_bytes(
        builder: *mut fdb_payload_v1_builder_t,
        value: *const u8,
        value_size: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_fixed_run(
        builder: *mut fdb_payload_v1_builder_t,
        run: *const fdb_payload_v1_fixed_run_v1_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_component_begin(
        builder: *mut fdb_payload_v1_builder_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_list_begin(
        builder: *mut fdb_payload_v1_builder_t,
        item_count: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_object(
        builder: *mut fdb_payload_v1_builder_t,
        object: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_value_ref(
        builder: *mut fdb_payload_v1_builder_t,
        object: u64,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_builder_freeze(
        builder: *mut fdb_payload_v1_builder_t,
        out_plan: *mut *mut fdb_payload_v1_plan_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;

    pub fn fdb_payload_v1_plan_retain(plan: *mut fdb_payload_v1_plan_t);
    pub fn fdb_payload_v1_plan_release(plan: *mut fdb_payload_v1_plan_t);
    pub fn fdb_payload_v1_plan_info(
        plan: *const fdb_payload_v1_plan_t,
        out_info: *mut fdb_payload_v1_plan_info_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_plan_execute(
        plan: *const fdb_payload_v1_plan_t,
        policy: u32,
        backing: *const fdb_payload_v1_backing_v1_t,
        out_payload: *mut *mut fdb_payload_v1_payload_t,
        out_report: *mut fdb_payload_v1_execution_report_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;

    pub fn fdb_payload_v1_payload_open_copy(
        spec: *const fdb_payload_v1_spec_t,
        bytes: *const u8,
        byte_count: u64,
        options: *const fdb_payload_v1_open_options_t,
        out_payload: *mut *mut fdb_payload_v1_payload_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_payload_open_external(
        spec: *const fdb_payload_v1_spec_t,
        bytes: *const u8,
        byte_count: u64,
        backing: *const fdb_payload_v1_backing_v1_t,
        owner_token: *mut c_void,
        options: *const fdb_payload_v1_open_options_t,
        out_payload: *mut *mut fdb_payload_v1_payload_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_payload_retain(payload: *mut fdb_payload_v1_payload_t);
    pub fn fdb_payload_v1_payload_release(payload: *mut fdb_payload_v1_payload_t);
    pub fn fdb_payload_v1_payload_sha256(
        payload: *const fdb_payload_v1_payload_t,
        out_digest: *mut u8,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_payload_profile(
        payload: *const fdb_payload_v1_payload_t,
        out_profile: *mut fdb_payload_v1_profile_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_payload_execution_report(
        payload: *const fdb_payload_v1_payload_t,
        out_report: *mut fdb_payload_v1_execution_report_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;
    pub fn fdb_payload_v1_payload_binary_blob(
        payload: *const fdb_payload_v1_payload_t,
        out_blob: *mut *mut fdb_payload_v1_blob_t,
        out_error: *mut *mut fdb_payload_v1_error_t,
    ) -> fdb_payload_v1_status_t;

    pub fn fdb_payload_v1_blob_retain(blob: *mut fdb_payload_v1_blob_t);
    pub fn fdb_payload_v1_blob_release(blob: *mut fdb_payload_v1_blob_t);
    pub fn fdb_payload_v1_blob_data(blob: *const fdb_payload_v1_blob_t) -> *const u8;
    pub fn fdb_payload_v1_blob_size(blob: *const fdb_payload_v1_blob_t) -> u64;

    pub fn fdb_payload_v1_error_retain(error: *mut fdb_payload_v1_error_t);
    pub fn fdb_payload_v1_error_release(error: *mut fdb_payload_v1_error_t);
    pub fn fdb_payload_v1_error_code(error: *const fdb_payload_v1_error_t) -> u32;
    pub fn fdb_payload_v1_error_symbol(
        error: *const fdb_payload_v1_error_t,
        out_data: *mut *const u8,
        out_size: *mut u64,
    );
    pub fn fdb_payload_v1_error_path(
        error: *const fdb_payload_v1_error_t,
        out_data: *mut *const u8,
        out_size: *mut u64,
    );
    pub fn fdb_payload_v1_error_message(
        error: *const fdb_payload_v1_error_t,
        out_data: *mut *const u8,
        out_size: *mut u64,
    );
    pub fn fdb_payload_v1_error_details_json(
        error: *const fdb_payload_v1_error_t,
        out_data: *mut *const u8,
        out_size: *mut u64,
    );
}

const _: () = {
    assert!(std::mem::size_of::<fdb_payload_v1_compile_options_t>() == 80);
    assert!(std::mem::size_of::<fdb_payload_v1_capabilities_t>() == 72);
    assert!(std::mem::size_of::<fdb_payload_v1_builder_options_t>() == 96);
    assert!(std::mem::size_of::<fdb_payload_v1_fixed_run_v1_t>() == 96);
    assert!(std::mem::size_of::<fdb_payload_v1_open_options_t>() == 112);
    assert!(std::mem::size_of::<fdb_payload_v1_plan_info_t>() == 112);
    assert!(std::mem::size_of::<fdb_payload_v1_execution_report_t>() == 72);
    assert!(std::mem::size_of::<fdb_payload_v1_backing_v1_t>() == 96);
};

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn raw_prefix_layout_and_core_abi_match() {
        assert_eq!(
            size_of::<fdb_payload_v1_compile_options_t>(),
            FDB_PAYLOAD_V1_COMPILE_OPTIONS_V1_SIZE as usize
        );
        assert_eq!(
            size_of::<fdb_payload_v1_capabilities_t>(),
            FDB_PAYLOAD_V1_CAPABILITIES_V1_SIZE as usize
        );
        assert_eq!(
            size_of::<fdb_payload_v1_builder_options_t>(),
            FDB_PAYLOAD_V1_BUILDER_OPTIONS_V2_SIZE as usize
        );
        assert_eq!(
            size_of::<fdb_payload_v1_fixed_run_v1_t>(),
            FDB_PAYLOAD_V1_FIXED_RUN_V1_SIZE as usize
        );
        assert_eq!(
            size_of::<fdb_payload_v1_plan_info_t>(),
            FDB_PAYLOAD_V1_PLAN_INFO_V2_SIZE as usize
        );
        assert_eq!(
            size_of::<fdb_payload_v1_open_options_t>(),
            FDB_PAYLOAD_V1_OPEN_OPTIONS_V1_SIZE as usize
        );
        assert_eq!(
            size_of::<fdb_payload_v1_execution_report_t>(),
            FDB_PAYLOAD_V1_EXECUTION_REPORT_V1_SIZE as usize
        );
        assert_eq!(
            size_of::<fdb_payload_v1_backing_v1_t>(),
            FDB_PAYLOAD_V1_BACKING_V1_SIZE as usize
        );
        // SAFETY: this function has no arguments and returns a value.
        assert_eq!(
            unsafe { fdb_payload_v1_abi_version() },
            FDB_PAYLOAD_V1_ABI_VERSION
        );
    }
}
